--- a/notebooks/algorithm_tuning.ipynb
+++ b/notebooks/algorithm_tuning.ipynb
@@ -2,95 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Läser in fil från: c:\\Users\\Jocke\\Documents\\Coding\\DeliverySystem\\data\\lagerstatus.csv\n"
+      "Läser in fil från: c:\\Users\\Jocke\\Documents\\Coding\\DeliverySystem\\data\\lagerstatus.csv\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 500 entries, 0 to 499\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   paket_id   500 non-null    int64  \n",
+      " 1   vikt       500 non-null    float64\n",
+      " 2   fortjanst  500 non-null    int64  \n",
+      " 3   deadline   500 non-null    int64  \n",
+      "dtypes: float64(1), int64(3)\n",
+      "memory usage: 15.8 KB\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>paket_id</th>\n",
-       "      <th>vikt</th>\n",
-       "      <th>fortjanst</th>\n",
-       "      <th>deadline</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5311457</td>\n",
-       "      <td>9.41</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3615632</td>\n",
-       "      <td>18.50</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9472782</td>\n",
-       "      <td>13.86</td>\n",
-       "      <td>7</td>\n",
-       "      <td>-4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1650145</td>\n",
-       "      <td>5.11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>7836777</td>\n",
-       "      <td>9.13</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   paket_id   vikt  fortjanst  deadline\n",
-       "0   5311457   9.41          5         0\n",
-       "1   3615632  18.50          9         0\n",
-       "2   9472782  13.86          7        -4\n",
-       "3   1650145   5.11          3         7\n",
-       "4   7836777   9.13          2        -5"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
