--- a/notebooks/delivery_use.ipynb
+++ b/notebooks/delivery_use.ipynb
@@ -23,7 +23,7 @@
     "sys.path.append(base_dir)  # Lägg till base_dir i sys.path\n",
     "\n",
     "# Nu fungerar importerna\n",
-    "from src.objects.optimizer import Optimizer\n",
+    "from src.optimizer import Optimizer\n",
     "from src.objects.package import Package\n",
     "from src.data_processing import load_data\n",
     "from src.visualization import visualize_fitness, visualize_histogram\n",
