--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -10,11 +10,11 @@
     "import sys\n",
     "\n",
     "# Sätt base_dir (projektets rotkatalog)\n",
-    "base_dir = os.path.abspath(\"..\")  # En nivå upp från notebooks/\n",
-    "sys.path.append(base_dir)  # Lägg till base_dir i sys.path\n",
+    "base_dir = os.path.abspath(\"..\")  \n",
+    "sys.path.append(base_dir) \n",
     "\n",
     "from src.evaluation import test_optimizer, visualize_results, analyze_best_solution\n",
-    "from src.objects.optimizer import Optimizer\n",
+    "from src.optimizer import Optimizer\n",
     "from src.data_processing import load_data\n",
     "\n",
     "# Ladda paketdata\n",
