Finished v.1 need test clean.

--- a/notebooks/delivery_use.ipynb
+++ b/notebooks/delivery_use.ipynb
@@ -18,11 +18,9 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "# Sätt base_dir (projektets rotkatalog)\n",
-    "base_dir = os.path.abspath(\"..\")  # En nivå upp från notebooks/\n",
-    "sys.path.append(base_dir)  # Lägg till base_dir i sys.path\n",
+    "base_dir = os.path.abspath(\"..\") \n",
+    "sys.path.append(base_dir)  \n",
     "\n",
-    "# Nu fungerar importerna\n",
     "from src.optimizer import Optimizer\n",
     "from src.objects.package import Package\n",
     "from src.data_processing import load_data\n",
@@ -35,21 +33,17 @@
     "lagerstatus3 = os.path.join(base_dir, \"data\", \"lagerstatus3.csv\")\n",
     "lagerstatus4 = os.path.join(base_dir, \"data\", \"lagerstatus4.csv\")\n",
     "\n",
-    "# Kontrollera att imports fungerar\n",
     "print(\"Imports lyckades!\")\n",
     "\n",
     "log_file = os.path.join(base_dir, \"logs\", \"in_use.log\")\n",
     "\n",
-    "# Rensa tidigare loggar\n",
     "if os.path.exists(log_file):\n",
     "    os.remove(log_file)\n",
     "\n",
-    "# Skapa en ny loggfil\n",
     "with open(log_file, 'w') as f:\n",
     "    f.write(\"New log file\\n\")\n",
     "\n",
     "\n",
-    "# Skapa testdataset\n",
     "packages1 = load_data(lagerstatus1)\n",
     "packages2 = load_data(lagerstatus2)\n",
     "packages3 = load_data(lagerstatus3)\n",
